--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Refresh" content="0; url=tidbits.pacsci.org/museumphotos/PacificSciCenter/index.html" />
-  </head>
-  <body>
-    <p>Redirecting to <a href="tidbits.pacsci.org/museumphotos/PacificSciCenter/index.html">the archive</a>...</p>
-  </body>
+<head>
+    <meta http-equiv="refresh" content="0; url=tidbits.pacsci.org/museumphotos/PacificSciCenter/menu.html">
+    <script>
+        window.location.href = "tidbits.pacsci.org/museumphotos/PacificSciCenter/menu.html";
+    </script>
+    <title>Pacific Science Center Archive</title>
+</head>
+<body>
+    <p>Loading Pacific Science Center archive...</p>
+    <p>If you're not redirected automatically, <a href="tidbits.pacsci.org/museumphotos/PacificSciCenter/menu.html">click here</a>.</p>
+</body>
 </html>
