Remove link to dead email and website

--- a/tidbits.pacsci.org/museumphotos/PacificSciCenter/menu.html
+++ b/tidbits.pacsci.org/museumphotos/PacificSciCenter/menu.html
@@ -106,10 +106,10 @@ I spent 25 years at <A HREF="http://www.pacsci.org/">Pacific Science Center </A>
 </font>
 <BR>
 <font size="2" color="black" face="Arial">
-<A HREF="http://tidbits.pacsci.org/museumphotos/Museums.html">  Return to Dave's Museum Photos</A><BR><BR>
+<BR><BR>
 
 <font size=-1>
-Copyright <A HREF="mailto:AHHA@comcast.net">David Taylor</A> 2004<BR>
+Copyright David Taylor 2004<BR>
 
 
 </body>
